# QuantCopierUI

./: .gitignore  EULA.txt  QCDiscordMT5_SetupExe_Spec.iss  QCTelegramMT5_SetupExe_Spec.iss  README.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
.github/workflows/: create-release.yml  update-release-body.yml  upload-to-gcs.yml  validate-version.yml
Backend/: .env  .env.example  DB_Service.py  DB_Service_FireBaseAdmin.py  PYTHON_AUTO_UPDATE_INTEGRATION.md  QuantCopierAPI.py  QuantCopierAPI.spec  README.md  api_version_info.txt  configHandler.py  gcp_bucket_manager.py  generate_sidecar.sh  generate_sidecar.spec  python_auto_updater.py  requirements.txt  test_firebase.py  test_telethon.py  windows_updater.py
Backend/cloud-functions/: GCS_ARCHIVE_SETUP.md
api/: tauri.ts
app/: layout.tsx  page.tsx
app/home/: page.tsx
app/onboarding/: page.tsx
components/: TelegramIcon.tsx  about-modal.tsx  auth-layout.tsx  eula.tsx  floating-info-button.tsx  phone-form.tsx  verification-form.tsx
components/home/: AlertNotificationCard.tsx  EnhancedHeader.tsx  HomeDashboard.tsx  MT5AccountCard.tsx  ProfileDropdown.tsx  Sidebar.tsx  SubscribedChannelsCard.tsx
components/onboarding/: DiscordTokenSetup.tsx  MT5Setup.tsx  Step1MT5.tsx  Step2ChannelSelect.tsx  Step3NotificationSetup.tsx  (+2 more)
lib/: auto-updater.ts
scripts/: auto-updater.js  update-release-body.js
src-tauri/: .taurignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: hooks.nsi  installer.nsi
src-tauri/src/: lib.rs
(+15 files in other folders)
